# MLGkernel

./: .gitignore  CMakeLists.txt  README.md
MLGkernel/: CMakeLists.txt  FLGkernel.cpp  MLGdataset.cpp  MLGdataset.hpp  runMLG.cpp
matrices/: Cvector.hpp
